Finalize static support